Update 6. План поэтапной разработки и расширения системы, анализ критически важных компонентов.MD

--- a/6. План поэтапной разработки и расширения системы, анализ критически важных компонентов.MD
+++ b/6. План поэтапной разработки и расширения системы, анализ критически важных компонентов.MD
@@ -1,6 +1,6 @@
 #  План поэтапной разработки и расширения системы, анализ критически важных компонентов.
 
-1. Последовательность реализации
+## Последовательность реализации
   1. Создание тренировок и расписания тренировок
   2. Сравнение своих тренировок
   3. Создание инвентаря и добавление в него товаров
@@ -13,7 +13,7 @@
   10. Добавить новости спорта
   11. Интеграция с фитнес-функциями смартфона.
   12. Подключение внешних устройств/датчиков
-2. Объем первоначальной версии: MVP должен поддерживать:
+## Объем первоначальной версии: MVP должен поддерживать:
   1. создание тренировок и расписания тренировок, сравнение результатов тренировок.
   2. создание инвентаря и добавление в него товаров, промоакции и подсказки по инвентарю
   3. [Можно исключить из MVP при недостатке ресурса] Возможность общаться с другими пользователями и создавать совместные тренировки.
