Update 08. Анализ и список нефункциональных требований.MD
НФТ по доменам

--- a/08. Анализ и список нефункциональных требований.MD
+++ b/08. Анализ и список нефункциональных требований.MD
@@ -2,10 +2,34 @@
 
 | **Атрибут качества** | **Нефункциональные требования** |
 | --- | --- |
-| Производительность | Приложение должно обрабатывать не менее 10000 (в пике 20000) одновременных подключенийВремя ответа не должно превышать 3 секунды. |
-| Совместимость: | Приложение должно работать на Android начиная с вервии 4.4 (Это минимальная версия на данный момент поддерживающая GooglePlay)Приложение должно работать на IOS начиная с версии 10.3.4 (iPhone 5)Приложение должно корректно работать при нестабильном сетевом соединении |
-| Удобство использования | Интеграция с другими приложениями компании. |
-| Надежность | Доступность: приложение должно быть доступно не менее 95 % времени.Восстанавливаемость: после сбоя работоспособность сервера должна быть восстановлена не позднее 30 минутТребования к надежности хранения данных не ниже TierIII |
-| Защищенность | Вход по протоколу OAuth 2.0Взаимодействие с backend по защищённым протоколам TLSПароли должны храниться в зашифрованном виде |
-| Сопровождаемость | Сквозная наблюдаемостьАвтоматическое восстановление после сбоев |
+| Производительность | Приложение должно обрабатывать не менее 10000 (в пике 20000) одновременных подключенийВремя ответа не должно превышать 3 секунды. Масштабируемость: система должна автоматически масштабироваться под нагрузкой до полной проектируемой нагрузки.|
+| Совместимость: | Приложение должно работать на Android начиная с вервии 4.4 (Это минимальная версия на данный момент поддерживающая GooglePlay). Приложение должно работать на IOS начиная с версии 10.3.4 (iPhone 5). Приложение должно корректно работать при нестабильном сетевом соединении |
+| Удобство использования | Интеграция с другими приложениями компании. Автоматическая подстановка кодов из SMS. |
+| Надежность | Доступность: приложение должно быть доступно не менее 95 % времени. Восстанавливаемость: после сбоя работоспособность сервера должна быть восстановлена не позднее 30 минутТребования к надежности хранения данных не ниже TierIII |
+| Защищенность | Вход по протоколу OAuth 2.0Взаимодействие с backend по защищённым протоколам TLS. Пароли должны храниться в зашифрованном виде |
+| Сопровождаемость | Сквозная наблюдаемость. Автоматическое восстановление после сбоев |
 | Переносимость | сервисы, предлагается запускать в изолированной среде |
+#  Основные домены:
+Пользователи - сюда можно отнести пользователей, группы и все что с ними связано
+Инвентарь - сюда относится инвентарь пользователя (список продуктов), датчики доступные для подключения. У этого домена будет интеграция с магазином (подсказки по заменен, промоакции)
+Тренировка - сюда относятся коллективные мероприятия (тренировка/соривнование)
+#  Основные НФТ по доменам:
+## Пользователи
+| **Атрибут качества** | **Нефункциональные требования** |
+| Производительность | Приложение должно обрабатывать не менее 10000 (в пике 20000) одновременных подключений. Время ответа не должно превышать 3 секунды. |
+| Удобство использования | Использование общего аккаунта во всех приложениях компании. Пользователь должен иметь возможность получать уведомления.|
+| Защищенность | Использование защищенного протокола для входа (OAUth 2.0). Должна быть доступна двухфакторная аутентификация. Число последовательных попыток ввода неправильного пароля должнго быть ограничено (3-5). Отслеживаемость: все попытки входа должны логироваться. Пароли должны храниться в хешированном виде, должен испольоваться надежный алгоритм шифрования. | 
+| Отказоустойчивость | Доступность: возможность входа в систему должна быть доступна не менее 99.9 % времени. Восстанавливаемость: Восстанавливаемость: сервис должен автоматически восстанавливаться после сбоев. | 
+| Ограничения | Хранение персональных данных на территориях стран, гдн нсть представительства компании в соответствии с местным законодательством|
+## Инвентарь
+| **Атрибут качества** | **Нефункциональные требования** |
+| Производительность | Приложение должно обрабатывать не менее 10000 (в пике 20000) одновременных подключений. Время ответа не должно превышать 3 секунды. |
+| Удобство использования | Уровень вложенности интерфейсов при навигации не более трех. Должен быть организован бесшовный переход в приложение с магазином (обновление инвентаря, промоакции, etc.), возможность получать уведомления. Возможность локализации.|
+| Защищенность | Использование протокола шифрования TLS. | 
+| Надежность | Доступность: приложение должно быть доступно не менее 95 % времени. |
+## Тренировка
+| **Атрибут качества** | **Нефункциональные требования** |
+| Производительность | Приложение должно обрабатывать не менее 10000 (в пике 20000) одновременных подключений. Время ответа не должно превышать 3 секунды. |
+| Удобство использования | Уровень вложенности интерфейсов при навигации не более трех, возможность получать уведомления. Возможность локализации.|
+| Защищенность | Использование протокола шифрования TLS. | 
+| Надежность | Доступность: приложение должно быть доступно не менее 95% времени. Приложение должно корректно работать с прерываниями сети. Т.к. во время тренировки пользователь может перемещаться в зоны с нестабильным интернетом, то приложение должно позволять пользователю вносить изменения локально, а потом синхронизировать с сервером. Сообщения должны быть доставлены после восстановления соединения.|
