--- a/11. ADR.md
+++ b/11. ADR.md
@@ -18,3 +18,82 @@
 4.	Решение: Процессы в приложении короткие во времени и в количестве вызовов и не содержат эволюционирующей логики. Нет смысла применять BPM-движок или BPMS (или более урезанный аналог “Workflow”), это только усложнит разработку и сопровождение. Очереди так же отпадают как мене гибкий вариант. Остановимся на реализации логики бизнес-процесса в приложении в виде автомата конечных состояний. –  это самый простой и быстрый в разработке, в то же время гибкий и тестируемый метод.
 5.	Статус: принято
 6.	Последствия: это не самый гибкий метод, наблюдаемость зависит от реализации, зато быстрый в разработке, относительно простой в сопровождении и тестируемый.
+# Оптимизация для сетей с низким уровнем подключения.
+1.	Дата: 28.05.2023
+2.	Контекст: Мобильное приложение может использоваться в различных регионах (в т.ч. в малонаселенной или дикой местности в условиях нестабильное связи). Следует уделить особое внимание стабильной работе приложения в условиях периодического отключения сигнала и низкой скорости сети. Проблемы могут возникнуть с загрузкой медиаконтента (медленная сеть), доступ к данным и их хранение (прерывания сети), объем запросов к серверу (серверы перегружаются запросами)
+3.	Опции:
+
+    3.1.	“Кеширование” – использовать локальное хранилище, а после восстановления подключения использовать запрос на массовую загрузку. Следует помнить об истечении срока действия кэша
+    
+    3.2.	“Оптимизация изображений” – использовать WebP вместо JPEG или PNG для ускорения загрузки
+    
+    3.3.	“Асинхронные вызовы” – использование очередей, когда сеть восстановится все приложения будут отправлены.
+    
+    3.4.	“Стратегии на стороне сервера” – использовать механизмы кеширования и передачи данных на стороне сервера. Например, Android выпустил серверную функциональность, которая обеспечивает больше доступа к данным на основе разрешений. В соответствии с этой схемой приложение отправляет запросы данных только тогда, когда оно находится на переднем плане или в фоновом режиме, оптимизируя общую производительность.
+    
+    3.5.	“Обновление с намерением” – выпускать только важные обновления, можно использовать гибридное приложение, когда обновления происходят на сервере.
+    3.6.	“Легкое приложение” ¬– создать урезанную версию приложения, оптимизированную для настроек с низким уровнем подключения.
+4.	Решение: так или иначе нужно будет использовать кэширование и очереди для доставки сообщений.
+5.	Статус: отложено
+6.	Последствия: нет
+
+# Нативное, гибридное, Web-приложение.
+1.	Дата: 28.05.2023
+2.	Контекст: требуется выбрать технологию клиентской части приложения - от этого будет зависеть время разработки и сложность сопровождения.
+3.	Опции:
+  
+    3.1.	“Native” – приложение написано под конкретную платформу на нативном Языке (для Android — Kotlin и Java, для Apple iOS — Objective-C и Swift). Нативное мобильное приложение имеет доступ ко всем нативным технологиям и аппаратным возможностям конкретной платформы. Нативные мобильные приложения необходимо загружать и устанавливать на устройство, например, через официальные магазины Google Play Market и App Store. 
+Преимущества:
+доступ к аппаратной части устройства (геолокации, камере, микрофону, акселерометру, датчикам освещенности, календарю, push-уведомлениям) и широкий функционал за счет этого;
+могут закрыть больше различных запросов заказчиков и пользователей;
+данные пользователя можно легко собирать и анализировать;
+обычно, работают более стабильно и эффективно с любыми применяемыми устройствами на своей ОС;
+нет ограничения функционала скоростью и качеством Интернет-соединения, приложение может работать без выхода в сеть;
+лучше подходят для проектов с кастомизированными интерфейсами и сложной бизнес-логикой.
+Недостатки:
+дорогие в разработке;
+для разработки нужно больше времени;
+проходят верификацию каждым магазином приложений;
+охватывают мало платформ и несовместимы с другими операционными системами;
+даже легкие изменения требуют регулярных обновлений.  
+
+    3.2.	“Web” – приложение работает через веб-браузер на устройстве пользователя. По сути, это кастомизированный веб-сайт, который выглядит как нативное приложение, но размещается не на устройстве пользователя.
+Преимущества:
+веб-приложения могут функционировать на платформе с любой ОС;
+разработчикам не нужно утверждать приложение с магазинами;
+цикл разработки CSS, HTML и JavaScript идет в разы быстрее.
+Недостатки:
+нет доступа к аппаратной части устройств пользователей, что значительно урезает функционал веб-приложений (например, невозможно сделать веб-приложение, которое задействует акселерометр на устройстве или включит камеру);
+использование возможно только через Интернет и зависит от его наличия, скорости и стабильной работы;
+приложения не каталогизированы в одном месте и их сложнее искать.        
+
+    3.3.	“Hybrid”. Гибридное приложение — компромисс между нативными и веб-приложениями. Оно размещаются в рамках нативного приложения и работают через WebView. У него есть доступ к информации на устройстве пользователя. WebView — это системный компонент, который открывает веб-страницы в рамках других приложений. Выглядит и используются как нативное приложения: его можно скачать из магазина и установить на устройство. Приложения имеет доступ к данным пользователя, но обычно само не хранит свои данные непосредственно на устройстве пользователя.
+Преимущества:
+широкий функционал и высокая степень кастомизации;
+можно создать приложение, которое будет работать с несколькими платформами;
+удешевляют и ускоряют разработку MVP или несложного готового продукта для заказчиков;
+являются серединным решением между функционалом и производительностью нативного приложения и дешевизной веб-приложения.
+Недостатки:
+слишком сложные приложения лучше делать нативными, как и приложения с громоздкими визуальными решениями вроде игр;
+разработка потребует больше времени и усилий, чтобы гибридное приложение выглядело и ощущалось как нативное;
+магазины приложений отклоняют недостаточно хорошо работающие гибридные приложения и важно соблюдать стандарты качества.
+
+    3.4 “Cross-platform”.  Кросс-платформенная разработка приложений значит, что приложение разработано с такой технологией/языком/фреймворком, который позволяет использовать его сразу на нескольких разных ОС — Android, iOS, Windows, Linux и т. д. Например, приложения, разработанные с использованием React-Native, могут работать на Android и iOS. Разработка гибридных приложений значит, что приложение разработано с использованием нескольких языков/технологий, но это не всегда означает, что оно будет кросс-платформенным. Приложения могут быть гибридными, но не обязательно будут считаться кросс-платформенными. Приложение может считаться кросс-платформенным, но не обязательно будет гибридным, оно может быть веб-приложением или даже нативным (например, фреймворк React Native использует среду выполнения JavaScript для рендеринга JavaScript-кода и возможности последующей публикации приложения как в Google Play Market, так и в App Store). Аналогично, приложения могут быть гибридными и иметь свойство кроссплатформенности одновременно (например, React-Native + родной язык платформы). Подходы при разработке мобильного приложения можно комбинировать. Например, создавать критичные к производительности экраны на нативных технологиях, а второстепенные — на кросс-платформенных.
+Преимущества:
+кросс-платформенная разработка намного быстрее разработки нативных мобильных приложений сразу под несколько разных платформ по отдельности;
+отлично подходит для стартапов, которым необходимо быстрее выйти на рынок с MVP, чтобы проверить теорию;
+подходит для создания ивент-приложений, например, для деловых конференций, ярмарок и т. д. из-за быстроты создания;
+кросс-платформенная разработка чаще способствует более эффективному развитию разработчиков, так как задействует работу с несколькими технологиями и средами, а также стимулирует навык решения проблем;
+кросс-платформенность удобна при написании простого приложения с малым количеством экранов для нескольких платформ (идеальная задача для кросс платформы — простая мобильная игра).
+Недостатки:
+iOS и Android существенно различаются и это вызывает сложности в разработке и множество лагов в работе готового приложения (чаще это касается элементов интерфейса и их рендеринга, показатели Animation FPS и Animation RAM могут отличаться на 3-5 раз в худшую сторону);
+кросс-платформенные приложения чаще крашатся, дольше думают и тормозят;
+поддерживать кросс-платформенный код сложнее — обновление систем приводит к частому обновлению программных интерфейсов, что требует больше времени разработчика
+в кросс-платформенном мире небольшое сообщество и часто приходится решать проблемы самостоятельно, высокий риск столкнуться с проблемой, о которой мало кто знает;
+разработка кроссплатформенных приложений может значительно упростить жизнь и сэкономить деньги заказчику и владельцам бизнеса, которые ограничены в финансовых возможностях, и добавить головной боли разработчику;
+но кросс-платформенное приложение может потребовать огромных усилий дразработчиков и больших вложений заказчика при переходе из MVP в готовый продукт и при масштабировании продукта;
+кросс-платформенное приложение может использовать больше ресурса батареи устройства пользователя, причем, даже в полтора раза, что неудобно при частом использовании приложения.
+
+4.	Решение: web-приложение не подходит т.к. не позволяет использовать аппаратные возможности (подключать датчики). Кроссплатформенные приложения отпадают из-за более медленной работы, сложности при развитии от MVP до полной версии и малого сообщества (вероятность столкнуться с проблемой, о которой не будет информации). Чисто гибридное приложение (весь контент представлен в виде WebView не подойдет из-за высокой вероятности работы с сетями с низким уровнем подключения.) Но в гибридном приложении часть экранов, может быть, нативными, а часть с использованием WebView – в частности это позволит производить обновления на сервере и таким образом пользователю не нужно будет их скачивать, а разработчику не нужна верификация обновлений магазином приложений. Пока что у чисто нативного или гибридного (с частью нативного функционала) приложения нет очевидных преимуществ. Решено использовать нативное приложение с возможным гибридным функционалом (часть экранов будет работать через WebView).
+5.	Статус: отложено
+6.	Последствия: потребуется отдельная разработка для разных платформ – это будет дольше и дороже, но приложение будет работать быстро и стабильно.
