--- a/13. Архитектура.md
+++ b/13. Архитектура.md
@@ -6,10 +6,8 @@ SSO. Отдельным компонентом выделим SSO – логич
 Mobile App – еще один технический компонент, выполняет роль frontend на стороне пользователя, так же позволяет выполнять часть действий локально (выполняет функции кеширования), что бы приложение могло работать в сетях с низким уровнем подключения или с некоторыми ограничениями автономно (например пользователь может создавать тренировки без подключения к сети).
 
 <image src="Компоненты_Высокоуровневая_диаграмма.jpg" alt="">
-
+qqq
 ![](Компоненты_Высокоуровневая_диаграмма.png)
-
-![](Концептуальная_архитектура.png)
 
 Рисунок 1. Высокоуровневая диаграмма компонентов (разбиение по доменам)
 Добавим необходимые технологические компоненты:
