--- a/13. Архитектура.md
+++ b/13. Архитектура.md
@@ -1,12 +1,12 @@
 Разобьем приложение на домены. Каждому домену может соответствовать (микро)сервис:
 
-*Account* – то, что связано только с пользователем – его спортивный инвентарь. так же списки групп, друзей, тренировок, датчиков.
+*Inventory* – то, что связано только с пользователем – его спортивный инвентарь.
 
 *Training* – тренировки и все что с ними связано: подключаемые датчики, расписание тренировок, список участников, маршрут, таблица результатов
 
-*Interaction* - социальное взаимодействие: группы, чаты, поиск пользователей, уведомления
+*Social* - социальное взаимодействие: группы, чаты, поиск пользователей, уведомления, списки друзей и групп для пользователей.
 
-*SSO* Отдельным компонентом выделим SSO – логически он является частью Account, но технически это общий компонент для всех приложений компании и в нем хранятся персональные данные (а в других сервисах нет), соответственно к нему предъявляются другие требования по безопасности и размещению в облаке.
+*SSO* Отдельным компонентом выделим SSO – это общий компонент для всех приложений компании и в нем хранятся персональные данные (а в других сервисах нет), соответственно к нему предъявляются другие требования по безопасности и размещению в облаке.
 
 *Mobile App* – еще один технический компонент, выполняет роль frontend на стороне пользователя, так же позволяет выполнять часть действий локально (выполняет функции кеширования), что бы приложение могло работать в сетях с низким уровнем подключения или с некоторыми ограничениями автономно (например пользователь может создавать тренировки без подключения к сети).
 
