Update 14. Основные представления.md

--- a/14. Основные представления.md
+++ b/14. Основные представления.md
@@ -26,3 +26,5 @@ CocroaccDB состоит из следующих слоев:
 Каждый кластер для одного региона имеет как минимум три узла, распределенных по трем зонам доступности (*“Availability Zone”*, AZ) в регионе поставщика облачных услуг. Кластеры с несколькими регионами аналогичны кластерам с одним регионом, где узлы распределены по трем или более зонам доступности в каждом регионе
 
 Перед кластером CocroachDB ставится Load Balancer и Proxy выполняющий роль API Gateway и дополнительной балансировки.
+
+![](Развертывание_БД_Distributed_SQL_CocroachDB.png)
