Update 14. Основные представления.md

--- a/14. Основные представления.md
+++ b/14. Основные представления.md
@@ -1,3 +1,9 @@
+# Functional view
+Разобьем функционал по доменам : функционал который может работать без подключения к сети вынесем отдельно: это инвентарь и тренировки. Этот функционал будет реализовываться боьшей частью на стороне клиента, а на стороне сервера будет синхронизация (что бы пользоваться аккаунтом с различных устройств и что бы другие сервисы могли использовать эту информацию и контент требующий подключения к интернету (например глобальные списки результатов тренировок/соревнований в тренировках) или промоакции в инвентаре) Все социальные взаимодействия требуют подключения к сети и будут вынесены в отдельный модуль. В принципе сервисы Инвентарь и Тренировки можно объединить.
+![](Functional_view.png)
+Для примера приведем диаграмму последовательности для тренировок, все остальные диаграммы выглядят однотипно и намого короче, не вижу смысла приводить их
+![](Sequence_Training.png)
+
 # Concurrency view
 Для хранения данных выберем “Cloud-Native” решение: будем применять подход “Distributed SQL”. Он гарантирует согласованность данных (consistency), как если бы транзакции проходили последовательно. Рассмотрим пример с использованием CockroachDB – open source Distributed SQL БД от Google. Для обеспечения согласованности данных CockroachDB требует, чтобы все операции записи распространялись на кворум данных, для этого используется протокол согласия Raft.
 
