Update 14. Основные представления.md

--- a/14. Основные представления.md
+++ b/14. Основные представления.md
@@ -5,6 +5,10 @@
 ![](Sequence_Training.png)
 
 # Concurrency view
+## Межпроцессное взаимодействие между микросервисами
+ля приложения важна корректная работа в сетях с низким уровнем подключения (тренировки могут происходить в зонал с нестабильным сигналом) и возможность корректной обработки резкого всплеска пользователей (например, проведение соревнований). Так же приложение будет широко распростаранено географически - возможно потребуются региональные сервера. Все это приводит к необходимости использования брокера сообщений. Взаимодействие между сервисами будет происходить посредством асинхронного API (AMQP/JMS). При этом сами микросервисы могут предоставлять синхронные REST API. Брокер сообщений состоит изследующих частей: Producer - создает сообщения и помещает из в очередь сообщений, очереди сообщений (могут быть 1к1 или издатель-подписчики) и Consumer - опрашивает очередь и считывает предназначенные ему сообщения. Сообщение состоит из тела и заголовка. Сообщение может содержать в себе id очереди в которую нужно положить ответ. Consumer обращается к сервису 2 (по синхронному протоколу REST API/RPC или так же по AMQP/JMS. Исходный запрос на API Gateway так же может быть REST API или AMQP/JMS
+![](IPC.png)
+## Транзакции в БД
 Для хранения данных выберем “Cloud-Native” решение: будем применять подход “Distributed SQL”. Он гарантирует согласованность данных (consistency), как если бы транзакции проходили последовательно. Рассмотрим пример с использованием CockroachDB – open source Distributed SQL БД от Google. Для обеспечения согласованности данных CockroachDB требует, чтобы все операции записи распространялись на кворум данных, для этого используется протокол согласия Raft.
 
 CocroaccDB состоит из следующих слоев:
