--- a/14. Основные представления.md
+++ b/14. Основные представления.md
@@ -3,7 +3,8 @@
 ![](Functional_view.png)
 Для примера приведем диаграмму последовательности для тренировок, все остальные диаграммы выглядят однотипно и намого короче, не вижу смысла приводить их
 ![](Sequence_Training.png)
-
+# Informational view
+![](Informational_view.png)
 # Concurrency view
 ## Межпроцессное взаимодействие между микросервисами
 ля приложения важна корректная работа в сетях с низким уровнем подключения (тренировки могут происходить в зонал с нестабильным сигналом) и возможность корректной обработки резкого всплеска пользователей (например, проведение соревнований). Так же приложение будет широко распростаранено географически - возможно потребуются региональные сервера. Все это приводит к необходимости использования брокера сообщений. Взаимодействие между сервисами будет происходить посредством асинхронного API (AMQP/JMS). При этом сами микросервисы могут предоставлять синхронные REST API. Брокер сообщений состоит изследующих частей: Producer - создает сообщения и помещает из в очередь сообщений, очереди сообщений (могут быть 1к1 или издатель-подписчики) и Consumer - опрашивает очередь и считывает предназначенные ему сообщения. Сообщение состоит из тела и заголовка. Сообщение может содержать в себе id очереди в которую нужно положить ответ. Consumer обращается к сервису 2 (по синхронному протоколу REST API/RPC или так же по AMQP/JMS. Исходный запрос на API Gateway так же может быть REST API или AMQP/JMS
