Update 14. Основные представления.md

--- a/14. Основные представления.md
+++ b/14. Основные представления.md
@@ -39,3 +39,7 @@ CocroaccDB состоит из следующих слоев:
 Перед кластером CocroachDB ставится Load Balancer и Proxy выполняющий роль API Gateway и дополнительной балансировки.
 
 ![](Развертывание_БД_Distributed_SQL_CocroachDB.png)
+
+# Infrastructural view
+![](Infrastructural_view.png)
+
