Update 14. Основные представления.md

--- a/14. Основные представления.md
+++ b/14. Основные представления.md
@@ -43,3 +43,10 @@ CocroaccDB состоит из следующих слоев:
 # Infrastructural view
 ![](Infrastructural_view.png)
 
+# Security view
+Трафик извне в сеть предприятия должен попадать через WAF расположенный в DMZ-зоне, на нем должны бать закрыты все порты кроме используемых
+Далее весь трафик проходит через Reverse Proxy который анализирует его и отбрасывает потенциально опасный, большинство Reverse Proxy обеспечивают защиту от угоз OWASP Top10.
+Взаимодействие между компонентами должно происходить по шифроманным протоколам TLS/SSL с использованием SSL сертификатов. Для авторизации и аутентификации пользователей используется SSO, работающий по протоколу OAuth 2.0. Сначала сисема (микросервис) регистрируется в SSO. Затем эта система может выдавать токены авторизованным пользователям. При любом обращении в одну из систем использующих SSO она п роверяет валидность токена в SSO. Должна быть предусмотрена двухфакторная аутентификация 
+![](Security_view.png)
+Ниже приведена диаграмма последовательности как пользователь получает доступ к ресурсу (при запросе к сервису проверяется токен и если его нет то пользователю выводится окно авторизации. Использкуется 2 токена: токен доступа и refresh токен (валиден дольше чем токен доступа). Если у пользователя валиден refresh токен, но закончился токен доступа, то он может получить новый в SSO без повторного логина.)
+![](SSO.png)
