--- a/13. Архитектура.md
+++ b/13. Архитектура.md
@@ -57,7 +57,7 @@ SSO при этом так же должно работать через API Gat
 Рисунок 4.  диаграмма контекста
 
 Поскольку целевым является развертывание в облаке, предлагается использовать контейнеризацию Docker и оркестрацию Kubernetes как максимально переносимые компоненты: практически все облака поддерживают и многие сопровождают их, систему легко мигрировать с одного облака в другое, так же это самый распространенный стек и у него большое комьюнити, соответственно столкнувшись с проблемой в большинстве случаев можно будет найти готовый ответ.
-Все сервисы разместим в *k8s*. Все технологические компоненты являются обыкновенными сервисами и могут быть развернуты в любых количествах. Мастер нода может быть совмещено с worker node. Ниже приведена диаграмма для боле простого случая, но при использовании *ESB* ничего не изменится, просто добавится несколько компонент на мастер-ноде. Все соединения из вне в k8s и из k8s кластер баз данных (*DB Cluster*) должны идти через *Reverse Proxy* – он будет выполнять функции Firewall и балансировщика нагрузки. Так же вне k8s должен находиться *Observability backend*. Можно использовать отдельные компоненты, например Zabbix для мониторинга и Loki для логирования, тогда в каждой ноде будет установлен агент (коллектор) соответствующего сервиса, а вен кластера сервисная часть с соответствующей БД. На схеме ниже выбран подход с использованием стандарта OpenTelemetry (OTL). В данном случает *OTL collector* развертывается на каждой ноде и передает данные в соответствующий backend. Так же здесь используется Grafana для визуализации логов, метрик и трассировок, сама по себе она не собирает никакой информации, а просто предоставляет удобный интерфейс. Выбор конкретных компонент указан на схеме для примера.
+Все сервисы разместим в *k8s*. Все технологические компоненты являются обыкновенными сервисами и могут быть развернуты в любых количествах. Мастер нода может быть совмещено с worker node. Ниже приведена диаграмма для боле простого случая, но при использовании *ESB* ничего не изменится, просто добавится несколько компонент на мастер-ноде. Все соединения из вне в k8s и из k8s кластер баз данных (*DB Cluster*) должны идти через *Reverse Proxy* – он будет выполнять функции Firewall и балансировщика нагрузки. Так же вне k8s должен находиться *Observability backend*. Можно использовать отдельные компоненты, например Zabbix для мониторинга и Loki для логирования, тогда в каждой ноде будет установлен агент (коллектор) соответствующего сервиса, а вен кластера сервисная часть с соответствующей БД. На схеме ниже выбран подход с использованием стандарта OpenTelemetry (OTL). В данном случает *OTL collector* развертывается на каждой ноде и передает данные в соответствующий backend. Так же здесь используется Grafana для визуализации логов, метрик и трассировок, сама по себе она не собирает никакой информации, а просто предоставляет удобный интерфейс. Выбор конкретных компонент указан на схеме для примера. Клиентское приложение подключается в корпоративную сеть через WAF в демилитаризованной зоне (DMZ) Для раработы датчиков потребуется Time Series Database (TSDB). Для работына мобильном устройстве хватит In-Memory TSDB.
 
 ![](Развертывание.png)
 
